--- a/frontend/dockerfile
+++ b/frontend/dockerfile
@@ -4,7 +4,7 @@ COPY . /opt/
 
 WORKDIR /opt
 
-RUN npm install && npn run build
+RUN npm install && npm run build
 
 RUN apk update && apk add apache2 -y
 
