--- a/backend/dockerfile
+++ b/backend/dockerfile
@@ -10,8 +10,8 @@ RUN mvn clean package
 
 WORKDIR /opt/target/
 
-ENTRYPOINT ["java", "-jar"]
+ENTRYPOINT ["java", "-jar", "springbootstudent-registration-backend-0.0.1-SNAPSHOT.jar"]
 
 EXPOSE 8080
 
-CMD [ "springbootstudent-registration-backend.0.0.1-SNAPSHOT.jar" ]
+
