--- a/backend/dockerfile
+++ b/backend/dockerfile
@@ -4,7 +4,7 @@ COPY . /opt/
 
 WORKDIR /opt
 
-COPY application.properties src\main\resources\application.properties
+# COPY application.properties src\main\resources\application.properties
 
 RUN mvn clean package
 
