--- a/backend/dockerfile
+++ b/backend/dockerfile
@@ -1,17 +1,24 @@
 FROM maven:3.8.3-openjdk-17
 
+# FROM ubuntu:22.04
+# RUN apt update
+# RUN apt install openjdk-17-jdk -y
+# RUN apt install maven
+
 COPY . /opt/
 
 WORKDIR /opt
 
-# COPY application.properties src\main\resources\application.properties
+# RUN rm -rf src/main/resources/application.properties
 
-RUN mvn clean package
+# COPY application.properties src/main/resources/application.properties
+
+RUN mvn clean package -DskipTests
 
 WORKDIR /opt/target/
 
-ENTRYPOINT ["java", "-jar", "springbootstudent-registration-backend-0.0.1-SNAPSHOT.jar"]
-
 EXPOSE 8080
 
+# ENTRYPOINT [ "java", "-jar" ]
 
+CMD ["java", "-jar", "student-registration-backend-0.0.1-SNAPSHOT.jar"]
